MUSICardio 4.0.6:
- Debug import of Carto .zip archives and .mesh files.
- PolygonROI: remove shift-click to draw, fix contrast after deactivation of repulsor and hide deactivated widgets.
- Pipelines: 
    * put back the possibility of closing layers at result steps,
    * fix VOICutter if no segmentation is done,
    * fix Histogram Analysis non manual algorithms.
    * fix pipeline crash when saving data.

MUSICardio 4.0.5:
- Allow to use data with different size or spacing in LCCLogDemons and DiffeomorphicDemons.
- Manual Registration: enhance landmark numbers for better user understanding.
- Fix Histogram Analysis width problem displaying multi-results.

MUSICardio 4.0.4:
- Fix some plugins wrongly loaded on Windows.

MUSICardio 4.0.3:
- Switch to Ubuntu 22.
- PolygonROI: update icons, fix a glitch when users change ROI label, hide label panel in pipelines.
- Histogram Analysis: enhance memory management and remove useless computation.
- Pipelines: correct arithmetic filters computation. 

MUSICardio 4.0.2:
- Fix drawing problem in pipelines with custom step of PolygonROI.

MUSICardio 4.0.1:
- Fix Python module installation bug on macOS.
- Fix Real Time compilation on Ubuntu/Fedora/macOS and Windows.
- Fix a pop-up problem with wrongly imported pipeline scripts.

MUSICardio 4.0:
- Put back the Pipelines workspace.
MUSICardio 4 provides its own embedded Python 3.10 interpreter. This facilitates the development of Python scripts and components within the application. 
A Python console and plugin API will be added in an upcoming version. Contact us at music-dev@inria.fr to discuss how this Python integration can help you.
Check the Pipelines documentation to see if your scripts need to be updated: https://music-test.inria.fr/musicardio/ in Development menu, or you can ask the team to help you.
Main change: switch "from medPipelineObjectWrapper import *" and "from medPipeline import *" to "from mscPipeline import *".