@@ -20,7 +20,7 @@ endif()
 cmake_policy(SET CMP0074 NEW)
 
 if(NOT DEFINED ${MEDINRIA_SUPERBUILD_VERSION})
-    set(MEDINRIA_SUPERBUILD_VERSION 4.0.6)
+    set(MEDINRIA_SUPERBUILD_VERSION 4.0.7)
 endif()
 
 SET(CMAKE_CXX_STANDARD 17)
