@@ -7,7 +7,7 @@
     "window": { "position": { "x": 100, "y": 100 },
                 "size": { "width": 640, "height": 300 } },
     "contents": [
-        { "x": 140, "y": 165, "type": "file", "path": "/Volumes/MUSICardio 4.0.6/MUSICardio.app" },
+        { "x": 140, "y": 165, "type": "file", "path": "/Volumes/MUSICardio 4.0.7/MUSICardio.app" },
         { "x": 480, "y": 165, "type": "link", "path": "/Applications" }
     ]
 }
